kubernetes/sucro/01-deployment.yml
# 01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  selector:
    matchLabels:
      app: microblog
  replicas: 1
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - image: susm20/microblog:3.0.0-prod
        imagePullPolicy: Always
        name: microblog
        ports:
        - containerPort: 5000
