kubernetes/sucro/03-ingress.yml
# 03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    # cert-manager.io/issuer: "letsencrypt-staging"

spec:
  ingressClassName: nginx # kopplar vår ingress till den installerade nginx-ingress
  tls: # sätter att vi ska bara acceptera https trafik till er domän
  - hosts:
    - devopsgrupp1susm.tech # här sätter vi in vårt domännamn
    secretName: demo-tls # det kommer senare skapas en secret med detta namnet som innehåller certificatet för vårt domännamn.
  rules:
  - host: <ditt domännamn>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
